# django-helsinki-health-endpoints

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml  release-please-config.json  sonar-project.properties
.github/workflows/: pre-commit.yml  publish.yml  release-please.yml  test.yml
helsinki_health_endpoints/: apps.py  checks.py  urls.py  utils.py  views.py
helsinki_health_endpoints/tests/: settings.py  test_checks.py  test_views.py
tests/: settings.py  test_utils.py  urls.py
