[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-helsinki-health-endpoints"
version = "1.0.0"
description = "Reusable Django app providing unified healthz and readiness endpoints for City of Helsinki projects"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "City of Helsinki", email = "dev@hel.fi" },
]
dependencies = [
    "Django>=5.2",
    "tomli>=2.0; python_version < '3.11'",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/City-of-Helsinki/django-helsinki-health-endpoints"
Repository = "https://github.com/City-of-Helsinki/django-helsinki-health-endpoints"
Issues = "https://github.com/City-of-Helsinki/django-helsinki-health-endpoints/issues"

[tool.hatch.build.targets.wheel]
packages = ["helsinki_health_endpoints"]

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
features = ["test"]
matrix-name-format = "dj{value}"
parallel = false
randomize = true

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11"]
django = ["5.2"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13", "3.14"]
django = ["5.2", "6.0"]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
    { value = "django~={matrix:django}" },
]

[tool.hatch.envs.hatch-test.scripts]
run = [
    "pytest{env:HATCH_TEST_ARGS:} {args}",
]
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"

[tool.hatch.envs.default]
dependencies = [
    "pre-commit",
]
features = ["test"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = [
    "pre-commit install",
    "pre-commit run -a",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # pyupgrade
    "UP",
]
extend-per-file-ignores = { "*/migrations/*" = ["E501"], "*/tests/*" = ["E501"] }

[tool.pytest.ini_options]
django_find_project = false
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = "."

[tool.coverage.run]
source = ["helsinki_health_endpoints"]
omit = ["*/tests/*"]
